# Competitive

./: .clang-format  .clangd  .gitmodules  :w  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  a.out  build.sh  conanfile.txt  error.txt  main.cpp  output.txt  precizne.cpp  run.sh  save.cpp  valgrind-out.txt  void.cpp
Catalyst/Session 1/: Catalyst For CP.pptx  accumulate.cpp  binarysearch.cpp  count.cpp  find.cpp  max.cpp  min.cpp  reverse.cpp  sort.cpp  vectorintro.cpp  vectorplus.cpp
Catalyst/Session 3/: Hashing.txt  problems.txt
Catalyst/Session4/: stl4.txt
CodeQuest/: q1.cpp  q2.cpp  q3.cpp
CodeStash/Algorithms/: fibbbot1.cpp  fibbbot2.cpp  fibbexp.cpp  fibbtop.cpp  quicksort.cpp  swap.cpp
CodeStash/DataStructures/: bst.cpp  forwardlist.cpp  heap.cpp  list.cpp  rbt.cpp
CodeStash/Miscallenous/: DynamicMethodTypeInference.java
FooBar/: decode.py  referral.txt  secret.txt
FooBar/BunnyWorkerLocations/: Solution.java  readme.txt
FooBar/DisorderlyEscape/: Solution.java  readme.txt  solution.py
FooBar/EscapePods/: Solution.java  readme.txt
FooBar/FuelInjectionPerfection/: Solution.java  readme.txt
FooBar/GearUpForDestruction/: Solution.java  readme.txt
FooBar/PrepareTheBunniesEscape/: Solution.java  readme.txt
FooBar/QueueToDo/: Solution.java  readme.txt
FooBar/RunningWithBunnies/: Solution.java  readme.txt
FooBar/SolarDoomsday/: Solution.java  readme.txt
IOIPractice/library3/: grader  grader.cpp  library3.cpp
Nexus/Algorithms/: a.out  bubblesort.cpp  insertionsort.cpp  kpo.cpp  lis.cpp  mergesort.cpp  quicksort.cpp  selectionsort.cpp
Nexus/DataStructures/: a.out  aniket.cpp  bitgraph.cpp  bst.cpp  cocomp.cpp  dptree.cpp  dsu.cpp  (+12 more)
include/: debug.hpp
src/: C.cpp  CF_2178_D.cpp  LSB.cpp  XLSL.cpp  codeforces.cpp  e.cpp  main.cpp  precizne.cpp  save.cpp  saveGRAPH.cpp  savesave.cpp  void.cpp
(+3 files in other folders)
